--- a/action.yml
+++ b/action.yml
@@ -20,7 +20,8 @@ inputs:
 outputs:
   env-name: # id of output
     description: 'The name of environment'
-
+  env-name-lower: # id of output
+    description: 'rRturn environment name in lowecase'
   aws-access-key-id:
     description: 'The name of aws-access-key-id match with env branch name'
   aws-secret-access-key:
