--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Run test action
         id: test
-        uses: samuraitruong/branch-env-actions@v1.0
+        uses: samuraitruong/branch-env-actions@v1
         with:
           fallback: main
       - name: Print Output
@@ -15,6 +15,22 @@ jobs:
           echo "env-name = ${{ steps.test.outputs.env-name }}"
           echo "aws-access-key-id = ${{ steps.test.outputs.aws-access-key-id }}"
           echo "aws-secret-access-key = ${{ steps.test.outputs.aws-secret-access-key }}"
+  vars:
+    runs-on: ubuntu-latest
+    name: Dynamic vars input test
+    steps:
+      - name: Run test action
+        id: test
+        uses: samuraitruong/branch-env-actions@v1
+        with:
+          fallback: main
+          vars: var1,var2,var3
+      - name: Print Output
+        run: |
+          echo var1 = ${{ steps.test.outputs.var1 }}
+          echo var2 = ${{ steps.test.outputs.var2 }}
+          echo var3 = ${{ steps.test.outputs.var3 }}
+
   test1:
     runs-on: ubuntu-latest
     name: Branch - Prefix
@@ -22,7 +38,7 @@ jobs:
     steps:
       - name: Run test action
         id: test
-        uses: samuraitruong/branch-env-actions@v1.0
+        uses: samuraitruong/branch-env-actions@v1
         with:
           fallback: main
           branch-prefix: release/
@@ -38,7 +54,7 @@ jobs:
     steps:
       - name: Run test action
         id: test
-        uses: samuraitruong/branch-env-actions@v1.0
+        uses: samuraitruong/branch-env-actions@v1
         with:
           fallback: main
           mode: posfix
@@ -55,7 +71,7 @@ jobs:
     steps:
       - name: Run test action
         id: test
-        uses: samuraitruong/branch-env-actions@v1.0
+        uses: samuraitruong/branch-env-actions@v1
         with:
           uppercase: true
           mode: posfix
